2014-01-17 Ron Norman <rjn@inglenet.com>

	* intrinsic.c  - Change cob_intr_random to correctly compute RANDOM number

2013-12-26  Luke Bryan <cobcoder@users.sourceforge.net>

	* strings.c : Fix Unstring delimited by all delimiter size > 1 issue,
		see bug #54.

2010-09-03  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* screenio.c : Added cob_convert_key for converting keys according to used
		libraries (especially fix for PDCurses + numpad support)

2010-06-28  Roger While <simrw@sim-basis.de>

	* MARK - Version 2.0
	* Move to GPL/LGPL 3

2010-05-18  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* strings.c : fixing cob_unstring_into bug
		www.opencobol.org/modules/newbb/viewtopic.php?topic_id=1003&forum=1

20??-??-??  Roger While <simrw@sim-basis.de>

	* fileio.c : Implement COB_VARSEQ_FORMAT to override default format
		for variable length sequential files.

20??-??-??  Sergey Kashyrin <ska@kiska.net>

	* common.c : nanosleep for 370

2009-12-25  Roger While <simrw@sim-basis.de>

	* strings.c : Added check for COB_EC_RANGE_INSPECT_SIZE and
		NULL extension to cob_inspect_converting

2009-10-07  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.[ch], system.def : Added new system routine C$GETPID

2009-08-28  Roger While <simrw@sim-basis.de>

	* strings.c : Fix for UNSTRING with multiple variable length fields

2009-08-03  Sergey Kashyrin <ska@kiska.net>

	* common.c : cob_accept_day_of_week corrected

2009-08-03  Gary Cutler <CutlerGL@gmail.com>

	* common.c : cob_accept_day_of_week corrected

2009-07-25  Gary Cutler

	* screenio.c : Fix PDCurses bug with COLOR_PAIRS

2009-06-09  Roger While <simrw@sim-basis.de>

	* move.c : Fix editing symbol moves

2009-06-01  Roger While <simrw@sim-basis.de>

	* fileio.c : Revise memory algo for SORT - Introduce COB_SORT_CHUNK

2009-05-25  Roger While <simrw@sim-basis.de>

	* General : Remove the following extraneous include files: