@@ -1,3 +1,8 @@
+2014-03-03  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
+
+	* common.* : Rewriting cob_sig_handler, printing caught signal to stderr,
+		adding cob_reg_sighnd for registration of external signal handling
+
 2014-01-17 Ron Norman <rjn@inglenet.com>
 
 	* intrinsic.c  - Change cob_intr_random to correctly compute RANDOM number
